added AGE and printing the SCORE

--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
     <groupId>test.cybercube</groupId>
     <artifactId>consumer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>Consumer Kafka topic and insert in the Redis.</name>
-    <description>Demo project for Spring Boot</description>
+    <name>consumer</name>
+    <description>Consumer Kafka topic and insert in the Redis.</description>
 
     <properties>
-        <java.version>8</java.version>
+        <java.version>11</java.version>
     </properties>
 
     <dependencies>
@@ -66,12 +66,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
         <dependency>
