--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,6 +1,6 @@
 consumer:
-  #topic: "some_topic"
-  #bootstrap-servers: "127.0.0.1:9092"
+  topic: "some_topic"
+  bootstrap-servers: "127.0.0.1:9092"
   group-id: "some_group"
   auto-offset-reset: "earliest"
   redis-hostname: "localhost"
@@ -11,5 +11,8 @@ logging:
     root: info
 
 spring:
+  redis:
+    host: localhost
+    port: 6379
   main:
     web-application-type: none
