--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,13 +3,14 @@ consumer:
   bootstrap-servers: "127.0.0.1:9092"
   group-id: "some_group"
   auto-offset-reset: "earliest"
-  redis-hostname: "localhost"
-  redis-port: 6379
 
 logging:
   level:
     root: info
 
 spring:
+  redis:
+    host: "localhost"
+    port: 6379
   main:
     web-application-type: none
